# CUDA-C

./: CMakeLists.txt  README.md  tool.h
cuda_c_ch1/: hello.cu
cuda_c_ch2/: addMatrix.cu  addVec.cu  addVecWithClock.cu  checkDevice.cu  checkDimension.cu  checkThreadIndex.cu  sumArraysOnGPU-timer.cu  tool.h
cuda_c_ch3/: nestedHello.cu  nestedReduce.cu  reduce.cu  simpleDivergence.cu
cuda_c_ch4/: sumArraysZeroCopy.cu
